# code-cli-suit

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml  test_ccs.py
ccs/: __init__.py  __main__.py  apps.py  cli.py  defaults.py  errors.py  memory.py  models.py  settings.py
claude_switch/: __init__.py  ccs.py  daemon.py  models.py  session.py  store.py  workbench.py
claude_switch/adapters/: __init__.py  base.py  claude.py  generic.py
docs/backup/claude_switch/: protocol.py  workbench.py
docs/backup/claude_switch/active_legacy/: __main__.py  ccs.py  tui.py
docs/backup/claude_switch/adapters/: registry.py
docs/backup/docs/: README_legacy_launcher_tmux.md  README_zh_legacy.md
docs/backup/labs/b1-tmux-tui/: README.md  pyproject.toml
docs/backup/labs/b1-tmux-tui/cc_tmux/: __init__.py  __main__.py  cli.py  manager.py  tui.py
docs/backup/labs/b2-pty-tui/: README.md  all.txt  pyproject.toml  test_cc_pty.py
docs/backup/labs/b2-pty-tui/cc_pty/: __init__.py  __main__.py  cli.py  manager.py  terminal_widget.py  tui.py
docs/design/: ccs-user-interface-20260703-refactor.md  cleanup-unused-code-20260703-overview.md
docs/dev/: PLAN-006.md  PLAN-007.md  PLAN-008-clean-unused-code.md  PLAN-009-ccs-refactor-OUTCOME.md  PLAN-009-ccs-refactor.md
tests/: __init__.py  test_ccs.py
