[project]
name = "ccs"
version = "0.6.0"
description = "Code CLI Suite: launch Claude Code, Codex and OpenCode with shared memory"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = []

[project.scripts]
ccs = "ccs.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ccs*"]
exclude = ["backup*", "labs*"]
